--- a/style.css
+++ b/style.css
@@ -16,18 +16,28 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 2% 12% 1% 12%;
-    height: 10vh;
+    padding: 3% 12% 2% 12%;
+}
+
+.ham {
+    width: 4%;
+    display: none;
 }
 
 .logo {
     width: 10%;
+    transition: all 0.5s ease-in-out;
+}
+
+.logo:hover {
+    transform: scale(1) scale(1.2, 1.2);
 }
 
 .list {
     flex: 2;
     list-style: none;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
     gap: 2rem;
@@ -36,7 +46,7 @@ body {
 
 .list-item {
     font-size: 1rem;
-    padding-bottom: 1px;
+    border-bottom: 1px solid transparent;
     transition: color 300ms ease-in-out;
 }
 
@@ -49,9 +59,9 @@ body {
 .trial-btn {
     background-color: #40bcef;
     color: #fff;
-    border: none;
+    border: 1px solid transparent;
     font-size: 1rem;
-    padding: 12px 20px;
+    padding: 0.9em 1.8em;
     transition: all 300ms ease-in-out;
 }
 
@@ -60,16 +70,19 @@ body {
     border: 1px solid #fff;
 }
 
+/* <!-- HERO --> */
+
 .hero-main {
     margin-top: 2%;
+    padding-bottom: 5%;
     display: flex;
     flex-direction: row;
+    align-items: center;
     gap: 5rem;
-    height: 90vh;
 }
 
 .hero-content {
-    float: left;
+    width: 28%;
     padding-left: 12%;
 }
 
@@ -84,10 +97,8 @@ body {
 }
 
 .img-1 {
-    position: absolute;
-    right: 2%;
-    top: 15%;
-    width: 50%;
+    width: 40%;
+    height: auto;
 }
 
 /* <!-- FEATURES-SECTION --> */
@@ -100,6 +111,7 @@ body {
 
 .img-2 {
     width: 40%;
+    height: auto;
 }
 
 .features-1-content {
@@ -138,6 +150,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 3rem;
 }
 
@@ -192,6 +205,11 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    transition: all 500ms ease-in-out;
+}
+
+.content-div2:hover {
+    transform: scale(1) scale(1.1, 1.1);
 }
 
 .content {
@@ -202,7 +220,7 @@ body {
     transition: all 200ms ease-in-out;
 }
 
-.content:hover {
+.content-div2:hover .content {
     color: #fff;
     background-color: #7457cc;
 }
@@ -218,4 +236,58 @@ body {
     text-align: center;
     font-size: 0.8rem;
     line-height: 1.5;
+}
+
+
+/* BREAKPOINT FOR TABLETS */
+
+@media (max-width:968px) {
+    html {
+        font-size: 12px;
+    }
+}
+
+/* BREAKPOINT FOR TABLETS */
+
+@media (max-width:820px) {
+    html {
+        font-size: 10px;
+    }
+}
+
+/* BREAKPOINT FOR MOBILES */
+
+@media (max-width:524px) {
+    html {
+        font-size: 8px;
+    }
+
+    .navbar {
+        justify-content: space-between;
+    }
+
+    .list {
+        display: none;
+    }
+
+    .trial-btn {
+        display: none;
+    }
+
+    .ham {
+        display: block;
+        filter: brightness(0) invert(1);
+    }
+
+    .hero-main {
+        flex-direction: column;
+        text-align: center;
+        gap: 2rem;
+    }
+
+    .hero-content {
+        width: 80%;
+        padding-left: 0;
+    }
+
 }
